# e-navigator

./: .clippy.toml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  PRODUCT.md  README.md  SECURITY.md  deny.toml  release.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
benchmarks/runner/local-benches/: Cargo.toml
benchmarks/runner/local-benches/benches/: hot_paths.rs
benchmarks/runner/local-benches/fixtures/: proc_meminfo.txt
benchmarks/runner/local-benches/src/: lib.rs
crates/e-navigator-cli/: Cargo.toml
crates/e-navigator-cli/src/: args.rs  config.rs  main.rs  registry.rs  time.rs
crates/e-navigator-cli/src/synthetic/: dns.rs  exec.rs  mod.rs  network.rs  profiling.rs  request.rs  resource.rs  source.rs  trace.rs
crates/e-navigator-cli/tests/: cli.rs
crates/e-navigator-cli/tests/fixtures/: default.toml  guara-compat-enabled.toml  invalid-cpu-profile-without-module.toml  invalid-unknown-module.toml  minimal.toml  profiling-enabled.toml  pyroscope-otlp-smoke.toml.in
crates/e-navigator-core/: Cargo.toml
crates/e-navigator-core/src/: capture_filter.rs  config.rs  error.rs  lib.rs  module.rs  pipeline.rs
crates/e-navigator-core/src/capture_filter/: mod.rs  resolve.rs
crates/e-navigator-core/src/config/: argv.rs  attribution.rs  capture_filter.rs  cpu_profile.rs  dns_metrics.rs  dns_source.rs  ebpf.rs  error.rs  http_source.rs  json_stdout.rs  kubernetes.rs  mod.rs  modules.rs  network_metrics.rs  otlp_http.rs  profiling.rs  prometheus_http.rs  protocol_source.rs  request_correlation.rs  resource_metrics.rs  resource_source.rs  runtime.rs  source_supervisor.rs  tests.rs  tls_source.rs  trace_correlation.rs
crates/e-navigator-ebpf-programs/: Cargo.toml
crates/e-navigator-ebpf-programs/src/: capture_policy.rs  dns_peer.rs  main.rs
crates/e-navigator-generators/: Cargo.toml
crates/e-navigator-generators/src/: dependency_graph.rs  dns_metrics.rs  guara_compat.rs  lib.rs  network_metrics.rs  profiling.rs  request_correlation.rs  resource_metrics.rs  runtime_security.rs  trace_correlation.rs
crates/e-navigator-generators/src/resource_metrics/: context.rs  counter.rs  gauge.rs  generator.rs  mapping.rs  mod.rs  state.rs  tests.rs
crates/e-navigator-generators/tests/: profiling.rs  request_correlation.rs  trace_correlation.rs
crates/e-navigator-processors/: Cargo.toml
crates/e-navigator-processors/src/: container_attribution.rs  lib.rs  workload_resource_filter.rs
crates/e-navigator-processors/src/container_attribution/: bounded_cache.rs  cgroup.rs  cgroup_id.rs  kubernetes.rs  mod.rs  pid.rs  processor.rs  tests.rs
crates/e-navigator-runner/: Cargo.toml
crates/e-navigator-runner/src/: lib.rs  registry.rs  runtime.rs  source_health.rs
crates/e-navigator-signals/: Cargo.toml
crates/e-navigator-signals/src/: dns.rs  envelope.rs  exec.rs  lib.rs  metrics.rs  network.rs  profiling.rs  request.rs  resource.rs  sanitize.rs  trace.rs
crates/e-navigator-signals/tests/: golden_signals.rs  profiling_signals.rs  request_signals.rs
crates/e-navigator-signals/tests/golden/: signal_families.json
crates/e-navigator-sinks/: Cargo.toml
crates/e-navigator-sinks/src/: exporter.rs  json_stdout.rs  lib.rs  native_telemetry.rs  otel_metric.rs  otel_profile.rs  otel_trace.rs  otlp_common.rs  otlp_http.rs  otlp_metric_proto.rs  otlp_profile_proto.rs  otlp_trace_proto.rs  pprof_profile.rs  profile_format.rs  prometheus.rs
crates/e-navigator-sinks/tests/: guara_compat.rs  otel_trace.rs  profile_format.rs
crates/e-navigator-sources-ebpf-aya/: Cargo.toml  build.rs
crates/e-navigator-sources-ebpf-aya/src/: capture_filter.rs  cpu_profile.rs  cpu_unwind.rs  diagnostics.rs  dns.rs  ebpf_maps.rs  event_transport.rs  exec.rs  go_tls.rs  http.rs  kernel_hook.rs  lib.rs  network.rs  perf_reader.rs  perf_sample.rs  procfs.rs  protocol.rs  reader_shutdown.rs  shutdown.rs  source_telemetry.rs  tls.rs
crates/e-navigator-sources-ebpf-aya/src/capture_filter/: apply.rs  discovery.rs  in_cluster.rs  tests.rs
crates/e-navigator-sources-ebpf-aya/src/cpu_unwind/: tests.rs
crates/e-navigator-sources-host/: Cargo.toml
crates/e-navigator-sources-host/src/: cgroup.rs  config.rs  filesystem.rs  lib.rs  model.rs  node.rs  parsers.rs  platform.rs  process.rs  snapshot.rs  source.rs
docs/: engineering-invariants.md
documentation/: README.md  architecture.md  benchmark.md  boundaries.md  capabilities.md  claims-matrix.md  engineering-invariants.md  golden-path.md  guara-compatibility.md  helm.md  module-authoring.md  operations.md  privileged-runtime-proof.md  proof-report.md  release-process.md  release-verification.md  rust-engineering.md  standalone-readiness.md  vision.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: capture_filter_cgroup_path.rs  capture_filter_glob.rs  elf_unwind_table.rs  go_amd64_return_sites.rs  go_build_info.rs  grpc_headers_parser.rs  grpc_web_message_parser.rs  host_procfs_parsers.rs  http2_hpack_decoder.rs  http_request_parser.rs  http_response_parser.rs  kafka_request_parser.rs  mongodb_message_parser.rs  mysql_command_parser.rs  nats_command_parser.rs  postgres_message_parser.rs  profile_fixture_parser.rs  profile_symbolize.rs  protocol_stream_decoder.rs  raw_cpu_profile_event_decode.rs  raw_dns_event_decode.rs  raw_exec_event_decode.rs  raw_http_request_event_decode.rs  raw_network_event_decode.rs  raw_protocol_data_event_decode.rs  raw_tcp_stat_event_decode.rs  redis_command_parser.rs  traceparent_parser.rs  websocket_frame_parser.rs
scripts/: check_docs.py  fuzz_check.sh  quality.sh  release.py  smoke_aya_cpu_profile_linux.sh  smoke_aya_exec_linux.sh
tests/: bootstrap_window_analysis_test.py  bootstrap_window_guard_test.sh  cgroup_hierarchy_guard_test.sh  chart_service_guard_test.sh  dns_connected_udp_guard_test.sh  event_transport_analysis_test.py  event_transport_guard_test.sh  go_tls_analysis_test.py  go_tls_bench_guard_test.sh  head_to_head_analysis_test.py  head_to_head_guard_test.sh  homelab_bench_guard_test.sh  smoke_docker.sh  (+13 more)
(+345 files in other folders)
