[workspace]
resolver = "2"
members = [
  "crates/e-navigator-core",
  "crates/e-navigator-cli",
  "crates/e-navigator-processors",
  "crates/e-navigator-generators",
  "crates/e-navigator-runner",
  "crates/e-navigator-ebpf-programs",
  "crates/e-navigator-signals",
  "crates/e-navigator-protocol",
  "crates/e-navigator-profiling",
  "crates/e-navigator-sinks",
  "crates/e-navigator-sources-host",
  "crates/e-navigator-sources-ebpf-aya",
  "benchmarks/runner/local-benches",
]
default-members = [
  "crates/e-navigator-core",
  "crates/e-navigator-cli",
  "crates/e-navigator-processors",
  "crates/e-navigator-generators",
  "crates/e-navigator-runner",
  "crates/e-navigator-signals",
  "crates/e-navigator-protocol",
  "crates/e-navigator-profiling",
  "crates/e-navigator-sinks",
  "crates/e-navigator-sources-host",
  "crates/e-navigator-sources-ebpf-aya",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/guaracloud/e-navigator"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
aya = { git = "https://github.com/aya-rs/aya", rev = "b277f74443d4befdeb088879d0c358d726f9aa8e", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "b277f74443d4befdeb088879d0c358d726f9aa8e", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "b277f74443d4befdeb088879d0c358d726f9aa8e", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "b277f74443d4befdeb088879d0c358d726f9aa8e", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "b277f74443d4befdeb088879d0c358d726f9aa8e", default-features = false }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
which = "8"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release.package.e-navigator-ebpf-programs]
debug = 2
codegen-units = 1
strip = false
