[package]
name = "e-navigator-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
e-navigator-profiling = { path = "../crates/e-navigator-profiling" }
e-navigator-protocol = { path = "../crates/e-navigator-protocol" }
e-navigator-sources-ebpf-aya = { path = "../crates/e-navigator-sources-ebpf-aya", features = ["fuzzing"] }
e-navigator-sources-host = { path = "../crates/e-navigator-sources-host" }
libfuzzer-sys = "0.4"

[[bin]]
name = "http2_hpack_decoder"
path = "fuzz_targets/http2_hpack_decoder.rs"
test = false
doc = false

[[bin]]
name = "protocol_stream_decoder"
path = "fuzz_targets/protocol_stream_decoder.rs"
test = false
doc = false

[[bin]]
name = "traceparent_parser"
path = "fuzz_targets/traceparent_parser.rs"
test = false
doc = false

[[bin]]
name = "http_request_parser"
path = "fuzz_targets/http_request_parser.rs"
test = false
doc = false

[[bin]]
name = "http_response_parser"
path = "fuzz_targets/http_response_parser.rs"
test = false
doc = false

[[bin]]
name = "grpc_headers_parser"
path = "fuzz_targets/grpc_headers_parser.rs"
test = false
doc = false

[[bin]]
name = "kafka_request_parser"
path = "fuzz_targets/kafka_request_parser.rs"
test = false
doc = false

[[bin]]
name = "mongodb_message_parser"
path = "fuzz_targets/mongodb_message_parser.rs"
test = false
doc = false

[[bin]]
name = "nats_command_parser"
path = "fuzz_targets/nats_command_parser.rs"
test = false
doc = false

[[bin]]
name = "mysql_command_parser"
path = "fuzz_targets/mysql_command_parser.rs"
test = false
doc = false

[[bin]]
name = "postgres_message_parser"
path = "fuzz_targets/postgres_message_parser.rs"
test = false
doc = false

[[bin]]
name = "redis_command_parser"
path = "fuzz_targets/redis_command_parser.rs"
test = false
doc = false

[[bin]]
name = "profile_symbolize"
path = "fuzz_targets/profile_symbolize.rs"
test = false
doc = false

[[bin]]
name = "profile_fixture_parser"
path = "fuzz_targets/profile_fixture_parser.rs"
test = false
doc = false

[[bin]]
name = "host_procfs_parsers"
path = "fuzz_targets/host_procfs_parsers.rs"
test = false
doc = false

[[bin]]
name = "raw_exec_event_decode"
path = "fuzz_targets/raw_exec_event_decode.rs"
test = false
doc = false

[[bin]]
name = "raw_network_event_decode"
path = "fuzz_targets/raw_network_event_decode.rs"
test = false
doc = false

[[bin]]
name = "raw_tcp_stat_event_decode"
path = "fuzz_targets/raw_tcp_stat_event_decode.rs"
test = false
doc = false

[[bin]]
name = "raw_dns_event_decode"
path = "fuzz_targets/raw_dns_event_decode.rs"
test = false
doc = false

[[bin]]
name = "raw_http_request_event_decode"
path = "fuzz_targets/raw_http_request_event_decode.rs"
test = false
doc = false

[[bin]]
name = "raw_protocol_data_event_decode"
path = "fuzz_targets/raw_protocol_data_event_decode.rs"
test = false
doc = false

[[bin]]
name = "raw_cpu_profile_event_decode"
path = "fuzz_targets/raw_cpu_profile_event_decode.rs"
test = false
doc = false
