[package]
name = "e-navigator-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "e-navigator"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-generators = { path = "../e-navigator-generators" }
e-navigator-profiling = { path = "../e-navigator-profiling" }
e-navigator-processors = { path = "../e-navigator-processors" }
e-navigator-runner = { path = "../e-navigator-runner" }
e-navigator-signals = { path = "../e-navigator-signals" }
e-navigator-sinks = { path = "../e-navigator-sinks" }
e-navigator-sources-ebpf-aya = { path = "../e-navigator-sources-ebpf-aya" }
e-navigator-sources-host = { path = "../e-navigator-sources-host" }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
