[package]
name = "e-navigator-ebpf-programs"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lints.rust]
unsafe_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bpf_target_arch, values("aarch64", "x86_64"))'] }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[dependencies]
aya-ebpf = { workspace = true }

[[bin]]
name = "e-navigator-ebpf-programs"
path = "src/main.rs"
