[package]
name = "e-navigator-ebpf-programs"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bpf_target_arch, values("aarch64", "x86_64"))'] }

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[features]
default = ["perf-buffer"]
perf-buffer = []
ring-buffer = []

[dependencies]
aya-ebpf = { workspace = true }

[[bin]]
name = "e-navigator-ebpf-programs"
path = "src/main.rs"
