[package]
name = "e-navigator-generators"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-protocol = { path = "../e-navigator-protocol" }
e-navigator-signals = { path = "../e-navigator-signals" }
tokio = { workspace = true }
tracing = { workspace = true }
