[package]
name = "e-navigator-runner"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-signals = { path = "../e-navigator-signals" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
e-navigator-generators = { path = "../e-navigator-generators" }
e-navigator-processors = { path = "../e-navigator-processors" }
