[package]
name = "e-navigator-signals"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
e-navigator-core = { path = "../e-navigator-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
