[package]
name = "e-navigator-sinks"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-signals = { path = "../e-navigator-signals" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
