[package]
name = "e-navigator-sinks"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-signals = { path = "../e-navigator-signals" }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "metrics", "trace"] }
prost = "0.14.4"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
