[package]
name = "e-navigator-sources-ebpf-aya"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[features]
default = []
fuzzing = []

[dependencies]
async-trait = { workspace = true }
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-protocol = { path = "../e-navigator-protocol" }
e-navigator-profiling = { path = "../e-navigator-profiling" }
e-navigator-signals = { path = "../e-navigator-signals" }
iced-x86 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-obj = { workspace = true }
libc = { workspace = true }
object = { workspace = true }
rustix = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
