[package]
name = "e-navigator-sources-host"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"

[dependencies]
async-trait.workspace = true
e-navigator-core = { path = "../e-navigator-core" }
e-navigator-signals = { path = "../e-navigator-signals" }
libc.workspace = true
tokio.workspace = true
tracing.workspace = true
