[package]
name = "e-navigator-local-benches"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
criterion = { workspace = true }
e-navigator-core = { path = "../../../crates/e-navigator-core" }
e-navigator-generators = { path = "../../../crates/e-navigator-generators" }
e-navigator-profiling = { path = "../../../crates/e-navigator-profiling" }
e-navigator-processors = { path = "../../../crates/e-navigator-processors" }
e-navigator-protocol = { path = "../../../crates/e-navigator-protocol" }
e-navigator-signals = { path = "../../../crates/e-navigator-signals" }
e-navigator-sinks = { path = "../../../crates/e-navigator-sinks" }
e-navigator-sources-ebpf-aya = { path = "../../../crates/e-navigator-sources-ebpf-aya", features = ["fuzzing"] }
e-navigator-sources-host = { path = "../../../crates/e-navigator-sources-host" }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "hot_paths"
harness = false
